--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .todo-item {
   width: 320px;
   padding: 8px;
-  border: 1px solid #eee;
+  border: 1px solid black;
   margin-top: 10px;
   text-align: center;
 }
